# salamander

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  setupenv.sh
include/config/: README.md  logging.scfg  renderer.scfg  window.scfg
include/shaders/: cubemap.frag  cubemap.vert  directionalShadow.vert  offscreen.vert  pointShadow.frag  pointShadow.geom  pointShadow.vert  scene.frag  scene.vert  sceneNormals.frag  sceneNormals.geom  sceneNormals.vert  triangle.frag  triangle.vert  triangle.vs
src/: main.cpp
src/core/Application/: Application.cpp  Application.h
src/core/Buffer/: Buffer.cpp  Buffer.h
src/core/Callbacks/: Callbacks.cpp  Callbacks.h
src/core/Command/: CommandManager.cpp  CommandManager.h
src/core/Config/: Config.cpp  Config.h
src/core/Defaults/: Defaults.cpp  Defaults.h
src/core/DisplayManager/: Camera.cpp  Camera.h  DisplayManager.cpp  DisplayManager.h  SwapchainHandler.cpp  SwapchainHandler.h  swapChainHandler.cpp  swapChainHandler.h  swapchainHandler.cpp  swapchainHandler.h
src/core/Logging/: DebugMessenger.cpp  DebugMessenger.h  ErrorLogger.cpp  ErrorLogger.h
src/core/Model/: ModelHandler.cpp  ModelHandler.h  VertexHandler.cpp  VertexHandler.h  vertexHandler.cpp  vertexHandler.h
src/core/Queue/: Queue.cpp  Queue.h
src/core/Renderer/: DisplayManager.cpp  DisplayManager.h  Offscreen.cpp  Offscreen.h  Pipeline.cpp  Pipeline.h  PipelineComponents.h  Renderer.cpp  Renderer.h
src/core/Shader/: Depth.cpp  Depth.h  Image.cpp  Image.h  ResourceDescriptor.cpp  ResourceDescriptor.h  Shader.cpp  Shader.h  Uniform.cpp  Uniform.h
src/core/VulkanExtensions/: VulkanExtensions.cpp  VulkanExtensions.h
src/core/VulkanInstance/: DeviceHandler.cpp  DeviceHandler.h  SupportUtils.cpp  SupportUtils.h  VulkanInstance.cpp  VulkanInstance.h  deviceHandler.cpp  deviceHandler.h  supportUtils.cpp  supportUtils.h
src/core/renderer/: renderer.cpp  renderer.h
src/utils/: FileUtils.cpp  FileUtils.h  MathUtils.cpp  MathUtils.h
